[tool.poetry]
name = "ar-viz"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
opencv-contrib-python = "^4.8.1.78"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
